--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,15 +1,8 @@
-/*--------------------仮--------------------*/
-.logo {
-  width: 200px;
-  height: 100px;
-  background: black;
-}
-/*--------------------仮--------------------*/
-
 #header {
   display: flex;
   flex-wrap: wrap;
   max-width: 1200px;
+  padding: 20px 30px;
   margin: 0 auto;
 }
 
@@ -23,6 +16,7 @@
   display: flex;
   list-style: none;
   width: 100%;
+  margin-top: 20px;
 }
 .gnavItem {
   text-align: center;
