--- a/src/css/index.css
+++ b/src/css/index.css
@@ -6,6 +6,9 @@
   }
 }
 
+.swiper {
+  margin-top: 20px !important;
+}
 .swiper-container {
   & img {
     width: 100%;
@@ -63,21 +66,29 @@
 #access {
   display: flex;
   flex-flow: row-reverse;
+  & .row {
+    width: 40%;
+    margin: 20px 5%;
+  }
 }
 .accessTitle {
-  display: none;
-}
-.accessList {
-  width: 30%;
-  margin: 20px 10%;
-}
-.accessListTitle {
-  font-size: 30px;
-}
-.accessItem {
-  margin-top: 20px;
   font-size: 20px;
 }
+.accessList {
+  & dt {
+    display: block;
+    float: left;
+    clear: left;
+    width: 20%;
+    margin-top: 20px;
+  }
+  & dd {
+    display: block;
+    float: left;
+    margin-top: 20px;
+  }
+}
+
 .map {
   width: 50%;
   height: auto;
