--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -15,13 +15,13 @@
   margin: 0 auto;
 }
 .footerGnavItem {
-  transition: .5s;
-  &:hover {
+  &:hover span {
+    display: inline-block;
     transform: rotateX(360deg);
     transition: .5s;
   }
   & a {
-    &::before {
+    & span::before {
       content: '◆';
       margin-right: 1ex;
     }
