--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,14 +1,39 @@
 #header {
+  background: linear-gradient(180deg, rgb(10, 27, 42) 20%, rgba(11, 56, 97, .8) 100%), url(/img/footerBg.gif);
+  background-repeat: repeat;
+  background-position: bottom;
+  border-bottom: 20px #0B3861 solid;
+}
+#headerInner {
   display: flex;
   flex-wrap: wrap;
   max-width: 1200px;
   padding: 20px 30px;
   margin: 0 auto;
+  position: relative;
+}
+
+.logo {
+  transition: .5s;
+  &:hover {
+    filter: drop-shadow(0px 0px 3px rgba(255, 255, 255, .5));
+    transition: .5s;
+  }
 }
 
 .schedule {
   list-style: none;
+  background-image: url(/img/scheduleBg.gif);
+  background-size: cover;
+  padding: 20px 30px;
   margin-left: auto;
+  border-radius: 0 0 10px 10px;
+  position: absolute;
+  top: 0;
+  right: 30px;
+}
+.scheduleItem:nth-child(2) {
+  margin-top: 10px;
 }
 
 .gnav {
@@ -16,29 +41,34 @@
   display: flex;
   list-style: none;
   width: 100%;
-  margin-top: 20px;
+  margin-top: 50px;
+  font-size: 20px;
+  &:hover .gnavItem a {
+    filter: blur(3px);
+    transition: .5s;
+  }
 }
 .gnavItem {
   text-align: center;
   width: calc(100% / 5);
-  border-left: 1px black dotted;
+  border-left: 1px white dotted;
   &:first-child {
     border-left: none;
   }
   & a {
     display: block;
-    padding: 1em 0;
+    transition: .5s;
     &:link {
       text-decoration: none;
-      color: black;
+      color: white;
     }
     &:visited {
       text-decoration: none;
-      color: black;
+      color: white;
     }
     &:hover {
-      text-decoration: none;
-      background: green;
+      filter: none !important;
+      transform: scale(1.2);
     }
   }
 }
