--- a/src/css/cats.css
+++ b/src/css/cats.css
@@ -8,16 +8,25 @@
 }
 .panel {
   max-width: calc(75% / 3);
-  margin-left: calc(25% / 2);
+  margin: 20px 0 0 calc(25% / 2);
+  border-radius: 10px;
+  overflow: hidden;
+  filter: drop-shadow(0px 0px 3px rgba(0, 0, 0, .3));
+  &:nth-child(-n+3) {
+    margin-top: 0;
+  }
   &:nth-child(3n+1) {
     margin-left: 0;
   }
   & img {
+    display: block;
     width: 100%;
   }
   & figcaption {
     text-align: center;
-    padding: 1em 0 2em;
+    padding: 1ex 0;
     font-size: 20px;
+    background-image: url(/img/scheduleBg.gif);
+    background-size: cover;
   }
 }
