--- a/src/css/menu.css
+++ b/src/css/menu.css
@@ -13,21 +13,41 @@
   }
   & table {
     width: 70%;
-    margin: 10px auto 0;
+    margin: 20px auto 0;
   }
   & td {
-    padding-top: 10px;
-    text-align: center;
+    width: 50%;
+    padding-top: 20px;
+    text-align: left;
+    &:nth-child(2) {
+      text-align: right;
+    }
   }
 }
 .menuTitle {
+  width: 70%;
+  margin: 0 auto;
   text-align: center;
-  background: green;
   padding: 1em 0;
+  font-size: 30px;
+  border-top: 3px #0B3861 solid;
+  border-bottom: 3px #0B3861 solid;
+  position: relative;
+  &::before {
+    content: '';
+    display: block;
+    width: calc(100% - 20px);
+    height: 70px;
+    border-top: 3px #0B3861 dashed;
+    border-bottom: 3px #0B3861 dashed;
+    position: absolute;
+    top: 7px;
+    left: 7px;
+  }
 }
 .menuImg {
   width: 70%;
-  margin: 0 auto;
+  margin: 20px auto 0;
   & img {
     display: block;
     width: 100%;
