--- a/public/css/app.css
+++ b/public/css/app.css
@@ -101,6 +101,13 @@ input, select {
     vertical-align:middle;
 }
 #header {
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(20%, rgb(10, 27, 42)), to(rgba(11, 56, 97, .8))), url(/img/footerBg.gif);
+  background: linear-gradient(180deg, rgb(10, 27, 42) 20%, rgba(11, 56, 97, .8) 100%), url(/img/footerBg.gif);
+  background-repeat: repeat;
+  background-position: bottom;
+  border-bottom: 20px #0B3861 solid;
+}
+#headerInner {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -109,11 +116,34 @@ input, select {
   max-width: 1200px;
   padding: 20px 30px;
   margin: 0 auto;
+  position: relative;
 }
+
+.logo {
+  -webkit-transition: .5s;
+  transition: .5s
+}
+
+.logo:hover {
+    -webkit-filter: drop-shadow(0px 0px 3px rgba(255, 255, 255, .5));
+            filter: drop-shadow(0px 0px 3px rgba(255, 255, 255, .5));
+    -webkit-transition: .5s;
+    transition: .5s;
+  }
 
 .schedule {
   list-style: none;
+  background-image: url(/img/scheduleBg.gif);
+  background-size: cover;
+  padding: 20px 30px;
   margin-left: auto;
+  border-radius: 0 0 10px 10px;
+  position: absolute;
+  top: 0;
+  right: 30px;
+}
+.scheduleItem:nth-child(2) {
+  margin-top: 10px;
 }
 
 .gnav {
@@ -123,37 +153,50 @@ input, select {
   display: flex;
   list-style: none;
   width: 100%;
-  margin-top: 20px;
+  margin-top: 50px;
+  font-size: 20px
 }
+
+.gnav:hover .gnavItem a {
+    -webkit-filter: blur(3px);
+            filter: blur(3px);
+    -webkit-transition: .5s;
+    transition: .5s;
+  }
 .gnavItem {
   text-align: center;
   width: calc(100% / 5);
-  border-left: 1px black dotted
+  border-left: 1px white dotted
 }
 .gnavItem:first-child {
     border-left: none;
   }
 .gnavItem a {
     display: block;
-    padding: 1em 0
+    -webkit-transition: .5s;
+    transition: .5s
   }
 .gnavItem a:link {
       text-decoration: none;
-      color: black;
+      color: white;
     }
 .gnavItem a:visited {
       text-decoration: none;
-      color: black;
+      color: white;
     }
 .gnavItem a:hover {
-      text-decoration: none;
-      background: green;
+      -webkit-filter: none !important;
+              filter: none !important;
+      -webkit-transform: scale(1.2);
+              transform: scale(1.2);
     }
 .footer {
-  background: #0B3861;
+  background: -webkit-gradient(linear, left bottom, left top, color-stop(20%, rgb(10, 27, 42)), to(rgba(11, 56, 97, .8))), url(/img/footerBg.gif);
+  background: linear-gradient(0deg, rgb(10, 27, 42) 20%, rgba(11, 56, 97, .8) 100%), url(/img/footerBg.gif);
+  background-repeat: repeat;
   padding: 50px 30px 20px;
   margin-top: 200px;
-  border-top: 10px #F7D358 solid;
+  border-top: 20px #0B3861 solid;
 }
 
 .footerGnav {
@@ -169,10 +212,17 @@ input, select {
   max-width: 1200px;
   margin: 0 auto;
 }
-.footerGnavItem::before {
-    content: '- ';
-    color: white;
+.footerGnavItem:hover span {
+    display: inline-block;
+    -webkit-transform: rotateX(360deg);
+            transform: rotateX(360deg);
+    -webkit-transition: .5s;
+    transition: .5s;
   }
+.footerGnavItem a span::before {
+      content: '◆';
+      margin-right: 1ex;
+    }
 .footerGnavItem a:link {
       text-decoration: none;
       color: white;
@@ -180,6 +230,9 @@ input, select {
 .footerGnavItem a:visited {
       text-decoration: none;
       color: white;
+    }
+.footerGnavItem a:hover {
+      color: #F7D358;
     }
 
 .icons {
@@ -190,14 +243,14 @@ input, select {
       -ms-flex-pack: justify;
           justify-content: space-between;
   list-style: none;
-  max-width: 300px;
-  margin: 20px auto 0;
+  max-width: 200px;
+  margin: 50px auto 0;
   color: white;
 }
 
 .copyright {
   text-align: center;
-  margin-top: 20px;
+  margin-top: 50px;
   font-family: 'Helvetica';
   font-weight: 100;
   color: white;
@@ -218,15 +271,17 @@ input, select {
   }
 
 .concept {
-  width: 50%;
   text-align: center;
 }
 .conceptTitle {
   font-size: 30px;
+  font-weight: lighter;
+  color: #0B3861;
 }
 .conceptText {
-  margin-top: 20px;
-  font-size: 20px;
+  max-width: 600px;
+  margin: 50px auto 0;
+  line-height: 50px;
 }
 
 .pickup {
@@ -241,8 +296,12 @@ input, select {
   position: relative;
   overflow: hidden;
   max-width: 320px;
+  margin-left: 30px;
   border-radius: 20px
 }
+.pickupItem:first-child {
+    margin-left: 0;
+  }
 .pickupItem a {
     display: block;
     -webkit-transition-duration: .5s;
@@ -285,8 +344,13 @@ input, select {
     margin: 20px 5%;
   }
 .accessTitle {
-  font-size: 20px;
+  font-size: 30px;
+  font-weight: lighter;
+  color: #0B3861
 }
+.accessTitle small {
+    font-size: 20px;
+  }
 .accessList dt {
     display: block;
     float: left;
@@ -299,6 +363,13 @@ input, select {
     float: left;
     margin-top: 20px;
   }
+.accessImg {
+  clear: both;
+  margin-top: 200px
+}
+.accessImg img {
+    width: 100%;
+  }
 
 .map {
   width: 50%;
@@ -310,8 +381,9 @@ input, select {
 
 .aboutText {
   text-align: center;
-  width: 50%;
-  margin-top: 50px !important;
+  max-width: 600px !important;
+  margin: 50px auto 0 !important;
+  line-height: 32px;
 }
 
 .feature {
@@ -331,8 +403,10 @@ input, select {
     width: 50%;
   }
 .featureTitle {
-  margin-left: calc(30% / 2);
-  font-size: 30px
+  padding-bottom: 20px;
+  margin: 0 calc(30% / 2);
+  font-size: 30px;
+  border-bottom: 5px black dotted
 }
 .featureTitle small {
     margin-left: 10px;
@@ -341,6 +415,8 @@ input, select {
 .featureText {
   width: 70%;
   margin: 20px auto 0;
+  text-align: justify;
+  line-height: 32px;
 }
 .featureImg {
   width: 50%
@@ -353,19 +429,31 @@ input, select {
 
 #system .systemTitle {
     text-align: center;
+    font-size: 50px;
   }
 
 #system table {
-    margin: 0 auto;
+    margin: 50px auto 0;
+    text-align: center;
+    overflow: hidden;
+    border-collapse: separate;
+    border-radius: 20px;
+    border: 3px #f7d358 solid;
+    background: white;
+    font-size: 20px;
+    -webkit-filter: drop-shadow(0px 0px 3px rgba(0, 0, 0, .3));
+            filter: drop-shadow(0px 0px 3px rgba(0, 0, 0, .3));
   }
 
 #system th {
-    border: 3px black solid;
-    background: gray;
+    padding: 20px 30px;
+    background: #f7d358;
   }
 
 #system td {
-    border: 3px black solid;
+    padding: 20px 30px;
+    border-top: 3px #f7d358 solid;
+    border-left: 3px #f7d358 solid;
   }
 .catsHeader {
   background-image: url(/img/catsHero.jpg);
@@ -380,18 +468,28 @@ input, select {
 }
 .panel {
   max-width: calc(75% / 3);
-  margin-left: calc(25% / 2)
+  margin: 20px 0 0 calc(25% / 2);
+  border-radius: 10px;
+  overflow: hidden;
+  -webkit-filter: drop-shadow(0px 0px 3px rgba(0, 0, 0, .3));
+          filter: drop-shadow(0px 0px 3px rgba(0, 0, 0, .3))
 }
+.panel:nth-child(-n+3) {
+    margin-top: 0;
+  }
 .panel:nth-child(3n+1) {
     margin-left: 0;
   }
 .panel img {
+    display: block;
     width: 100%;
   }
 .panel figcaption {
     text-align: center;
-    padding: 1em 0 2em;
+    padding: 1ex 0;
     font-size: 20px;
+    background-image: url(/img/scheduleBg.gif);
+    background-size: cover;
   }
 .menuHeader {
   background-image: url(/img/menuHero.jpg);
@@ -412,20 +510,40 @@ input, select {
   }
 .menuItem table {
     width: 70%;
-    margin: 10px auto 0;
+    margin: 20px auto 0;
   }
 .menuItem td {
-    padding-top: 10px;
-    text-align: center;
+    width: 50%;
+    padding-top: 20px;
+    text-align: left
   }
+.menuItem td:nth-child(2) {
+      text-align: right;
+    }
 .menuTitle {
+  width: 70%;
+  margin: 0 auto;
   text-align: center;
-  background: green;
   padding: 1em 0;
+  font-size: 30px;
+  border-top: 3px #0B3861 solid;
+  border-bottom: 3px #0B3861 solid;
+  position: relative
 }
+.menuTitle::before {
+    content: '';
+    display: block;
+    width: calc(100% - 20px);
+    height: 70px;
+    border-top: 3px #0B3861 dashed;
+    border-bottom: 3px #0B3861 dashed;
+    position: absolute;
+    top: 7px;
+    left: 7px;
+  }
 .menuImg {
   width: 70%;
-  margin: 0 auto
+  margin: 20px auto 0
 }
 .menuImg img {
     display: block;
@@ -436,7 +554,8 @@ html {
 }
 
 body {
-  font-family: 'Futura', 'monospace';
+  background: #f2f2f2;
+  font-family: 'Futura', 'Hiragino Maru Gothic Pro';
 }
 
 .contents >*:not(.header) {
