--- a/src/css/about.css
+++ b/src/css/about.css
@@ -19,8 +19,9 @@
   }
 }
 .featureTitle {
+  width: 70%;
   padding-bottom: 20px;
-  margin: 0 calc(30% / 2);
+  margin: 0 auto;
   font-size: 30px;
   border-bottom: 5px black dotted;
   & small {
@@ -60,11 +61,11 @@
     filter: drop-shadow(0px 0px 3px rgba(0, 0, 0, .3));
   }
   & th {
-    padding: 20px 30px;
+    padding: 1em 2em;
     background: #f7d358;
   }
   & td {
-    padding: 20px 30px;
+    padding: 1em 2em;
     border-top: 3px #f7d358 solid;
     border-left: 3px #f7d358 solid;
   }
