--- a/src/css/cats.css
+++ b/src/css/cats.css
@@ -8,12 +8,12 @@
 }
 .panel {
   max-width: calc(75% / 3);
-  margin: 20px 0 0 calc(25% / 2);
+  margin-left: calc(25% / 2);
   border-radius: 10px;
   overflow: hidden;
   filter: drop-shadow(0px 0px 3px rgba(0, 0, 0, .3));
-  &:nth-child(-n+3) {
-    margin-top: 0;
+  &:nth-child(n+4) {
+    margin-top: 50px;
   }
   &:nth-child(3n+1) {
     margin-left: 0;
