--- a/src/css/header.css
+++ b/src/css/header.css
@@ -37,7 +37,6 @@
 }
 
 .gnav {
-  clear: both;
   display: flex;
   list-style: none;
   width: 100%;
@@ -71,4 +70,8 @@
       transform: scale(1.2);
     }
   }
+}
+
+#openLabel, #closeLabel, #menuButton {
+    display: none;
 }
