--- a/src/css/index.css
+++ b/src/css/index.css
@@ -65,6 +65,7 @@
 }
 .pickupImg {
   & img {
+    display: block;
     width: 100%;
   }
 }
@@ -74,7 +75,7 @@
   flex-flow: row-reverse;
   & .row {
     width: 40%;
-    margin: 20px 5%;
+    margin: 20px 5% 0;
   }
 }
 .accessTitle {
@@ -90,8 +91,10 @@
     display: block;
     float: left;
     clear: left;
-    width: 20%;
+    width: 40%;
     margin-top: 20px;
+    font-weight: bolder;
+    color: #0B3861;
   }
   & dd {
     display: block;
@@ -101,13 +104,15 @@
 }
 .accessImg {
   clear: both;
-  margin-top: 200px;
+  display: inline-block;
+  max-width: 480px;
+  margin-top: 20px;
   & img {
+    display: block;
     width: 100%;
   }
 }
 
 .map {
-  width: 50%;
   height: auto;
 }
