--- a/src/css/menu.css
+++ b/src/css/menu.css
@@ -8,7 +8,7 @@
 }
 .menuItem {
   width: 50%;
-  &:nth-child(n+3) {
+  &:nth-of-type(n+3) {
     margin-top: 100px;
   }
   & table {
@@ -16,10 +16,11 @@
     margin: 20px auto 0;
   }
   & td {
-    width: 50%;
+    width: 70%;
     padding-top: 20px;
     text-align: left;
-    &:nth-child(2) {
+    &:nth-of-type(2) {
+      width: 30%;
       text-align: right;
     }
   }
